--- a/index.html
+++ b/index.html
@@ -18,12 +18,21 @@
       <header>
          <div class="logo d-flex justify-content-center align-items-center mt-2 mb-3">
             <img src="images/logo.png" alt="Logo image">
-            <h1 class="text-center text-primary">Phone <strong>Finder</strong></h1>
+            <h1 class="text-center">Phone <strong class="text-primary">Finder</strong></h1>
          </div>
       </header>
       <!-- Main content -->
       <main class="p-3">
-
+         <div class="container text-center">
+            <div class="row">
+               <div class="col-md-6 offset-md-3">
+                  <div class="search-box input-group mb-3">
+                     <input id="search-text" type="text" class="form-control p-3" placeholder="Search your phone" aria-label="Search your phone" aria-describedby="search-button">
+                     <button class="btn btn-outline-primary px-4" type="button" id="search-button" onclick="getSearchText()">Search</button>
+                   </div>
+               </div>
+            </div>
+         </div>
       </main>
 
       <!-- Bootstrap Bundle script -->
