--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </header>
       <!-- Main content -->
       <main class="p-3">
+         <!-- Search box area -->
          <div class="container text-center">
             <div class="row">
                <div class="col-md-6 offset-md-3">
@@ -31,6 +32,12 @@
                      <button class="btn btn-outline-primary px-4" type="button" id="search-button" onclick="getSearchText()">Search</button>
                    </div>
                </div>
+            </div>
+         </div>
+         <!-- Search result content area -->
+         <div class="container">
+            <div class="row" id="search-result">
+               
             </div>
          </div>
       </main>
