Update phone details content

--- a/index.html
+++ b/index.html
@@ -34,10 +34,17 @@
                </div>
             </div>
          </div>
-         <!-- Search result content area -->
+         <!-- Phone details area -->
          <div class="container">
-            <div class="row" id="search-result">
+            <div class="row" id="phone-details">
                
+            </div>
+         </div>
+         <!-- Search result content area -->
+         <div class="container my-2">
+            <h2 id="find-phone-count" class="text-center"></h2>
+            <div class="row" id="search-result">
+
             </div>
          </div>
       </main>
