Update product details and search massage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          </div>
          <!-- Search result content area -->
          <div class="container my-2">
-            <h2 id="find-phone-count" class="text-center"></h2>
+            <h2 id="search-message" class="text-center mt-5"></h2>
             <div class="row" id="search-result">
 
             </div>
