--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
          <!-- Search result content area -->
          <div class="container my-2">
             <h4 id="search-message" class="text-center mt-5"></h4>
+            <div id="spinner" class="spinner-border text-primary" role="status">
+               <span class="visually-hidden">Loading...</span>
+             </div>
             <div class="row" id="search-result">
 
             </div>
